fix fropdown scrollbar

--- a/flavors/gradio4/anxety-gr4.css
+++ b/flavors/gradio4/anxety-gr4.css
@@ -140,22 +140,10 @@
 }
 
 .gradio-dropdown ul.options  {
-  border: solid 2px var(--ctp-accent) !important;
+  box-shadow: 0 0 0 1px var(--ctp-accent);
+  border: solid 2px transparent;
   background-color: rgba(0, 0, 0, 0.55) !important; 
   backdrop-filter: blur(3px) !important;
-}
-
-/* === TagComplete === */
-.autocompleteResultsList > li:nth-child(odd) {
-  background-color: var(--ctp-base1) !important;
-  transition: all 0.15s ease;
-}
-.autocompleteResultsList > li:nth-child(even) {
-  background-color: var(--ctp-surface0) !important;
-}
-.autocompleteResultsList > li:nth-child(even):hover,
-.autocompleteResultsList > li:nth-child(odd):hover {
-  background-color: var(--ctp-surface1) !important;
 }
 
 /* === ScrollBar === */
@@ -172,8 +160,21 @@
 }
 ::-webkit-scrollbar-track,
 ::-webkit-scrollbar-corner {
-  background: var(--ctp-mantle);
-  border-radius: 0px;
+  background: var(--ctp-mantle) !important;
+  border-radius: 30px;
+}
+
+/* === TagComplete === */
+.autocompleteResultsList > li:nth-child(odd) {
+  background-color: var(--ctp-base1) !important;
+  transition: all 0.15s ease;
+}
+.autocompleteResultsList > li:nth-child(even) {
+  background-color: var(--ctp-surface0) !important;
+}
+.autocompleteResultsList > li:nth-child(even):hover,
+.autocompleteResultsList > li:nth-child(odd):hover {
+  background-color: var(--ctp-surface1) !important;
 }
 
 /* === Gradio Button Color === */
